Update _config.yml remove old linux publish path

--- a/_config.yml
+++ b/_config.yml
@@ -43,5 +43,5 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-source: /home/ferdisn/JekyllWeb2
-destination: /home/ferdisn/WebDir/files/www.ferdi.id
+#source: /home/ferdisn/JekyllWeb2
+#destination: /home/ferdisn/WebDir/files/www.ferdi.id
