--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-asseturl: https://asset.ferdi.id
-devasseturl: http://localhost:4001 # php -S localhost:4001 on asset.ferdi.id directory
+asseturl: http://localhost:4001 # php -S localhost:4001 on asset.ferdi.id directory
 url: "https://www.ferdi.id" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ferdisn
 github_username:  ferdisn
